--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,12 +2,15 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
-    android:backgroundTint="#141414"
-    android:elevation="0dp"
-    >
+    android:backgroundTint="#E6E6E6"
+    app:cardCornerRadius="10dp"
+    android:elevation="0dp">
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,6 +25,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
+            app:tint="@color/black"
             android:src="@drawable/ic_music"
             >
         </ImageView>
@@ -33,9 +37,9 @@
             android:layout_marginEnd="5dp"
             android:layout_toEndOf="@+id/imgSong"
             android:padding="6dp"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/black"
             android:text="Song Name"
-            android:textSize="15sp"
+            android:textSize="16sp"
             android:singleLine="true"
             android:marqueeRepeatLimit="marquee_forever"
             android:ellipsize="marquee"
