--- a/app/src/main/res/drawable/list_bg.xml
+++ b/app/src/main/res/drawable/list_bg.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    android:innerRadius="5dp">
-    <solid android:color="@color/black" />
-    <stroke android:width="1dp"
-        android:color="#4CAF50"/>
+    android:shape="rectangle">
+    <solid android:color="#C8C8C8" />
+    <stroke android:width="2dp"
+        android:color="#AAAAAA"/>
     <corners android:radius="10dp"/>
 </shape>
