--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -18,10 +18,10 @@
 
         <TextView
             android:id="@+id/txtSng"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
-            android:padding="10dp"
+            android:padding="5dp"
             android:singleLine="true"
             android:text="Song Name"
             android:textColor="@color/black"
@@ -35,10 +35,11 @@
 
         <ImageView
             android:id="@+id/imgView"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:layout_margin="5dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_margin="0dp"
             android:src="@drawable/ic_music"
+            android:scaleType="fitXY"
             app:tint="@color/black"
             >
 
@@ -48,7 +49,9 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="0dp">
+            android:layout_marginBottom="0dp"
+            android:layout_gravity="center_vertical"
+            >
 
             <SeekBar
                 android:id="@+id/skBar"
